[package]
name = "sounding-analysis"
version = "0.16.0"
edition = "2018"
publish = false

authors = ["Ryan <rnleach@users.noreply.github.com>"]
description = """Types and functions for working with weather soundings."""
repository = "https://github.com/rnleach/sounding-analysis.git"
readme = "README.md"
license-file = "LICENSE"

exclude = ["**/*.rs.bk",".gitignore",".vscode/**/*","*.sublime*", "tags", "*.vim"]

categories = ["science"]
keywords = ["weather","sounding","meteorology", "skew-t"]

[dependencies]
itertools = "^0.10.0"
chrono = "^0.4"
metfor = { version = "^0.7.6", features = ["use_optional"]}
optional = "^0.5.0"
strum = "0.20.0"
strum_macros = "0.20.0"

