[package]
name = "sounding-analysis"
version = "0.16.0"
edition = "2018"
publish = false

authors = ["Ryan <rnleach@users.noreply.github.com>"]
description = """Types and functions for working with weather soundings."""
repository = "https://github.com/rnleach/sounding-analysis.git"
readme = "README.md"
license-file = "LICENSE"

exclude = ["**/*.rs.bk",".gitignore",".vscode/**/*","*.sublime*", "tags", "*.vim"]

categories = ["science"]
keywords = ["weather","sounding","meteorology", "skew-t"]

[dependencies]
itertools = "^0.10.0"
chrono = "^0.4"
optional = "^0.5.0"
strum = "0.20.0"
strum_macros = "0.20.0"

[dependencies.metfor]
version = "^0.8.0"
features = ["use_optional"]
git = "https://github.com/rnleach/metfor.git"
tag = "v0.8.0"

[dev-dependencies]
criterion = {version = "0.3", features = ['html_reports']}

[[bench]]
name = "levels"
harness = false

[[bench]]
name = "indexes"
harness = false

[[bench]]
name = "layers"
harness = false

[[bench]]
name = "parcel"
harness = false

[[bench]]
name = "parcel_profile"
harness = false

[[bench]]
name = "profile"
harness = false

